Made Changes to the footer and content flexbox

--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
+/* RESET */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+/* BASE STYLE */
 body {
-  max-width: 1200px;
   min-height: 100vh;
   line-height: 2;
-  /* padding: 1rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 a {
   text-decoration: none;
 }
 
+/* Header */
 header {
   font-family: "Inconsolata", monospace;
   margin: 0rem 2rem;
 }
 
+/* Contennt */
 #content {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   font-family: "Montserrat", sans-serif;
-  width: 100%;
-  padding-top: 0.5rem;
+  overflow: hidden;
 }
+/* Content Left Box */
 .left-box {
   width: 50%;
   margin: 1.5rem;
@@ -32,10 +38,10 @@ header {
 .left-box img {
   width: 90%;
 }
-
+/* Content Right box*/
 .right-box {
   width: 50%;
-  margin-left: 3rem;
+  margin: 0rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,17 +66,20 @@ header {
   background: #333;
   color: #fff;
 }
-
+/* Footer */
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Space Mono", sans-serif;
-  text-align: center;
 }
 
-/* Mobile Screen */
+/* RESPONSIVE CSS STYLING */
 @media screen and (max-width: 780px) {
   #content {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .left-box {
     width: 100%;
@@ -79,7 +88,11 @@ footer {
     margin-left: 1rem;
   }
   .right-box {
-    margin: 2rem 0rem;
+    width: 90%;
+    margin: 2rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   .right-box h2 {
     font-size: 1.75rem;
